--- a/hcalEnv/notebooks/hcal_adc_dist.ipynb
+++ b/hcalEnv/notebooks/hcal_adc_dist.ipynb
@@ -15,29 +15,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c8c3598b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pedestals=pd.read_csv(\"../data/calibration/pedestals.csv\", sep=',')\n",
+    "pedestals=pd.read_csv(\"../../data/calibration/pedestals.csv\", sep=',')\n",
     "pedestals=pedestals.drop(columns=['pedestal_per_time_sample', 'std_dev', 'mean'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "82647529",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mips=pd.read_csv(\"../data/calibration/mip.csv\", sep=',')\n",
+    "mips=pd.read_csv(\"../../data/calibration/mip.csv\", sep=',')\n",
     "mips=mips.drop(columns=['eta', 'sigma', 'A'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "0debfc45",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "ff8f95c8",
    "metadata": {},
    "outputs": [],
@@ -62,17 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d43af2f4",
    "metadata": {},
    "outputs": [],
    "source": [
     "def drop_empty(df):\n",
-    "    events=[]\n",
-    "    adc_0=[]\n",
-    "    adc_1=[]\n",
-    "    l=[]\n",
-    "    s=[]\n",
     "    data=[]\n",
     "\n",
     "    layers=np.arange(1,20)\n",
@@ -103,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "7cf49dfd",
    "metadata": {},
    "outputs": [],
@@ -115,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "e14edd82",
    "metadata": {},
    "outputs": [],
@@ -141,12 +136,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "id": "a4e90340",
    "metadata": {},
    "outputs": [],
    "source": [
-    "electron=pd.read_csv(\"../data/runData/run_307.csv\", sep=',')\n",
+    "electron=pd.read_csv(\"../../data/runData/run_307.csv\", sep=',')\n",
     "electron=electron.drop(columns=['tot_end0', 'toa_end0','tot_end1', 'toa_end1', 'adc_max_end0', 'adc_max_end1',\n",
     "                                'pf_spill', 'adc_mean_end0', 'adc_mean_end1', 'pf_ticks'])\n",
     "\n",
@@ -360,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
