--- a/hcalEnv/notebooks/hcal_tot.ipynb
+++ b/hcalEnv/notebooks/hcal_tot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "5ce09354",
    "metadata": {},
    "outputs": [],
@@ -14,40 +14,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
+   "id": "89fc400a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c_folder=\"../../data/calibration\"\n",
+    "d_folder=\"../../data/runData\"\n",
+    "r_n=300\n",
+    "p_folder=\"../../plots/run_\"+str(r_n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "8e9e1a7b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pedestals=pd.read_csv(\"pedestals.csv\", sep=',')\n",
-    "pedestals=pedestals.drop(columns=['pedestal_per_time_sample', 'std_dev', 'mean'])"
+    "pedestals=pd.read_csv(c_folder+\"/pedestals.csv\", sep=',')\n",
+    "pedestals=pedestals.drop(columns=['pedestal_per_time_sample', 'mean'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "ffcb1200",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mips=pd.read_csv(\"mip.csv\", sep=',')\n",
-    "mips=mips.drop(columns=['eta', 'sigma', 'A'])"
+    "# mips=pd.read_csv(\"mip.csv\", sep=',')\n",
+    "# mips=mips.drop(columns=['eta', 'sigma', 'A'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "ef1a394f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bars = pd.read_csv('strips.txt', sep=\" \", header=None)\n",
-    "bars.columns = [\"layer\", \"strip\", \"x\", \"y\", \"z\"]"
+    "# bars = pd.read_csv('strips.txt', sep=\" \", header=None)\n",
+    "# bars.columns = [\"layer\", \"strip\", \"x\", \"y\", \"z\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "f01975cc",
    "metadata": {},
    "outputs": [],
@@ -60,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "dbccd904",
    "metadata": {},
    "outputs": [],
@@ -72,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "b49cf922",
    "metadata": {},
    "outputs": [],
@@ -92,17 +105,17 @@
     "        for strip in strips:\n",
     "            el=choose_bar(df,layer,strip)\n",
     "            peds=choose_bar(pedestals,layer,strip)\n",
-    "            mip=choose_bar(mips, layer, strip)\n",
+    "            # mip=choose_bar(mips, layer, strip)\n",
     "\n",
     "            if not peds.empty: # need to check whether the strip exists \n",
-    "                el=el[el[\"adc_sum_end0\"]>1.2*peds.iloc[0,-1]] # gets rid of bars where there's no data in end0\n",
-    "                el=el[el[\"adc_sum_end1\"]>1.2*peds.iloc[1,-1]] # gets rid of bars where there's no data in end1\n",
+    "                el=el[el[\"adc_sum_end0\"]>(peds.iloc[0,-2]+5*peds.iloc[0,-1])] \n",
+    "                el=el[el[\"adc_sum_end1\"]>(peds.iloc[1,-2]+5*peds.iloc[0,-1])] \n",
+    "\n",
+    "                el.loc[:,\"adc_sum_end0\"]-=peds.iloc[0,-2] # subtracting pedestals\n",
+    "                el.loc[:,\"adc_sum_end1\"]-=peds.iloc[1,-2]\n",
     "                \n",
-    "                el.loc[:,\"adc_sum_end0\"]-=peds.iloc[0,-1] # subtracting pedestals\n",
-    "                el.loc[:,\"adc_sum_end1\"]-=peds.iloc[1,-1]\n",
-    "                \n",
-    "                el.loc[:,\"adc_sum_end0\"]*=(4.66/mip.iloc[0,-1]) # converting to energy\n",
-    "                el.loc[:,\"adc_sum_end1\"]*=(4.66/mip.iloc[1,-1])\n",
+    "                # el.loc[:,\"adc_sum_end0\"]*=(4.66/mip.iloc[0,-1]) # converting to energy\n",
+    "                # el.loc[:,\"adc_sum_end1\"]*=(4.66/mip.iloc[1,-1])\n",
     "                \n",
     "                data.extend(el.values.tolist())\n",
     "    \n",
@@ -113,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "5f34ac82",
    "metadata": {},
    "outputs": [],
@@ -125,13 +138,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "87422ee7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# prepping db\n",
-    "electron=pd.read_csv(\"run_300.csv\", sep=',')\n",
+    "electron=pd.read_csv(d_folder+\"/run_\"+str(r_n)+\".csv\", sep=',')\n",
     "electron=electron.drop(columns=['toa_end0', 'toa_end1', 'adc_max_end0', 'adc_max_end1',\n",
     "                                'pf_spill', 'adc_mean_end0', 'adc_mean_end1', 'pf_ticks'])\n",
     "\n",
@@ -143,7 +156,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
+   "id": "c139b60a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>event</th>\n",
+       "      <th>tot_end0</th>\n",
+       "      <th>adc_sum_end0</th>\n",
+       "      <th>layer</th>\n",
+       "      <th>strip</th>\n",
+       "      <th>tot_end1</th>\n",
+       "      <th>adc_sum_end1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>341.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>129.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>444.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>188.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>501.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>131.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>126.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>766.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>51.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>878.0</td>\n",
+       "      <td>656.0</td>\n",
+       "      <td>4166.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>384.0</td>\n",
+       "      <td>2733.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   event  tot_end0  adc_sum_end0  layer  strip  tot_end1  adc_sum_end1\n",
+       "0  341.0       0.0         135.0    1.0    0.0       0.0         129.0\n",
+       "1  444.0       0.0          64.0    1.0    0.0       0.0         188.0\n",
+       "2  501.0       0.0         131.0    1.0    0.0       0.0         126.0\n",
+       "3  766.0       0.0          59.0    1.0    0.0       0.0          51.0\n",
+       "4  878.0     656.0        4166.0    1.0    0.0     384.0        2733.0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "electron.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "d4741922",
    "metadata": {},
    "outputs": [
@@ -152,7 +274,7 @@
      "output_type": "stream",
      "text": [
       "Percentage of event that fire TOT: \n",
-      "94.2966 %\n"
+      "94.2953 %\n"
      ]
     }
    ],
