--- a/hcalEnv/notebooks/new_header_maker.ipynb
+++ b/hcalEnv/notebooks/new_header_maker.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "cc5b6c52-a17e-4a15-b2dd-98a2d5efd302",
    "metadata": {},
    "outputs": [],
@@ -33,41 +33,239 @@
     "c_folder=\"../../data/calibration/\"\n",
     "d_folder=\"../../data/runData/\"\n",
     "r_n=307\n",
-    "pulsed=True\n",
     "p_folder=\"../../plots/run_\"+str(r_n)+\"/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "b996e5f4-7977-4ba1-a454-f8bd42a337de",
    "metadata": {},
    "outputs": [],
    "source": [
     "# helper functions\n",
-    "def choose_bar(df,layer, strip):\n",
+    "def choose_bar(df,layer, strip): #works\n",
     "    df=df[df[\"strip\"]==strip]\n",
     "    df=df[df[\"layer\"]==layer]\n",
     "    return df\n",
     "\n",
-    "def import_data(calibration_folder, data_folder, run_number, is_it_pulsed=False):\n",
-    "    pedestal_df=pd.read_csv(calibration_folder+\"pedestal.csv\", sep=',')\n",
+    "def import_data(calibration_folder, data_folder, run_number, is_it_pulsed=False): # works for both pulsed and not-pulsed\n",
+    "    \n",
+    "    pedestal_df=pd.read_csv(calibration_folder+\"pedestal_fixed.csv\", sep=',')\n",
     "    mip_df=pd.read_csv(calibration_folder+\"mip.csv\", sep=',')\n",
+    "    \n",
     "    if is_it_pulsed==True:\n",
     "        run_df=pd.read_csv(data_folder+\"run_\"+str(run_number)+\"_pulse.csv\", sep=',')\n",
+    "        run_df.drop([\"pf_spill\", \"pf_ticks\"], axis=1, inplace=True) # we never need these\n",
+    "        run_df.drop([\"toa_end0\", \"toa_end1\"], axis=1, inplace=True) # unreliable guys, but we might need them in the future\n",
     "    else:\n",
     "        run_df=pd.read_csv(data_folder+\"run_\"+str(run_number)+\".csv\", sep=',')\n",
+    "        run_df.drop([\"pf_spill\", \"pf_ticks\"], axis=1, inplace=True)\n",
+    "        run_df.drop([\"toa_end0\", \"toa_end1\"], axis=1, inplace=True)\n",
     "        \n",
     "    return pedestal_df,mip_df,run_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "3f405491-ef59-476d-a36a-9e6bd9071497",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "p,m,r=import_data(c_folder,d_folder, 307, is_it_pulsed=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "28e0a370-5e69-4522-8984-2ad463647297",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>layer</th>\n",
+       "      <th>strip</th>\n",
+       "      <th>end</th>\n",
+       "      <th>pedestal_end0</th>\n",
+       "      <th>std_dev_end0</th>\n",
+       "      <th>pedestal_end1</th>\n",
+       "      <th>std_dev_end1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>760</td>\n",
+       "      <td>9.674627</td>\n",
+       "      <td>840</td>\n",
+       "      <td>11.046368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>760</td>\n",
+       "      <td>14.564194</td>\n",
+       "      <td>760</td>\n",
+       "      <td>18.856047</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>728</td>\n",
+       "      <td>10.387670</td>\n",
+       "      <td>824</td>\n",
+       "      <td>10.888322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>728</td>\n",
+       "      <td>11.938451</td>\n",
+       "      <td>824</td>\n",
+       "      <td>13.267025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>824</td>\n",
+       "      <td>12.376215</td>\n",
+       "      <td>760</td>\n",
+       "      <td>11.554757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187</th>\n",
+       "      <td>19</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>760</td>\n",
+       "      <td>11.239116</td>\n",
+       "      <td>744</td>\n",
+       "      <td>11.614080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>19</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>792</td>\n",
+       "      <td>9.901413</td>\n",
+       "      <td>808</td>\n",
+       "      <td>10.536791</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189</th>\n",
+       "      <td>19</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>760</td>\n",
+       "      <td>8.508676</td>\n",
+       "      <td>824</td>\n",
+       "      <td>9.375246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>19</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>728</td>\n",
+       "      <td>9.138480</td>\n",
+       "      <td>824</td>\n",
+       "      <td>9.243012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191</th>\n",
+       "      <td>19</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>792</td>\n",
+       "      <td>11.286028</td>\n",
+       "      <td>760</td>\n",
+       "      <td>9.002523</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>192 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     layer  strip  end  pedestal_end0  std_dev_end0  pedestal_end1  \\\n",
+       "0        1      0    0            760      9.674627            840   \n",
+       "1        1      1    0            760     14.564194            760   \n",
+       "2        1      2    0            728     10.387670            824   \n",
+       "3        1      3    0            728     11.938451            824   \n",
+       "4        1      4    0            824     12.376215            760   \n",
+       "..     ...    ...  ...            ...           ...            ...   \n",
+       "187     19      7    0            760     11.239116            744   \n",
+       "188     19      8    0            792      9.901413            808   \n",
+       "189     19      9    0            760      8.508676            824   \n",
+       "190     19     10    0            728      9.138480            824   \n",
+       "191     19     11    0            792     11.286028            760   \n",
+       "\n",
+       "     std_dev_end1  \n",
+       "0       11.046368  \n",
+       "1       18.856047  \n",
+       "2       10.888322  \n",
+       "3       13.267025  \n",
+       "4       11.554757  \n",
+       "..            ...  \n",
+       "187     11.614080  \n",
+       "188     10.536791  \n",
+       "189      9.375246  \n",
+       "190      9.243012  \n",
+       "191      9.002523  \n",
+       "\n",
+       "[192 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p"
+   ]
   },
   {
    "cell_type": "code",
