--- a/hcalEnv/notebooks/remove_bad_pulses.ipynb
+++ b/hcalEnv/notebooks/remove_bad_pulses.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "ba8cc114-1240-4d4c-8cea-ed68d0dcdcb2",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
     "    return df\n",
     "\n",
     "def import_data(calibration_folder, data_folder, run_n):\n",
-    "    pedestals=drop_columns(pd.read_csv(calibration_folder+\"/pedestals_MIP.csv\", sep=','))\n",
+    "    pedestals=drop_columns(pd.read_csv(calibration_folder+\"/pedestal.csv\", sep=','))\n",
     "    mips=drop_columns(pd.read_csv(calibration_folder+\"/mip.csv\", sep=','))\n",
     "    run=drop_columns(pd.read_csv(data_folder+\"/run_\"+str(run_n)+\"_pulse.csv\", sep=','))\n",
     "    # run=run.astype({\"adc_sum_end0\":float,\"adc_sum_end1\":float}) \n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "e79190a6-02d9-4f44-97fb-cdd376a8086c",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "b5468c3b-d5aa-47ba-a470-7737ff3b0366",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "06ee6fbe-90d9-4a86-a743-20af6c78df60",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "658c958b-cc6b-4008-8d7d-7e3cdf74aea0",
    "metadata": {},
    "outputs": [],
@@ -152,13 +152,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "23b97650-fbdf-4f0d-bb7c-cf540356867c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 15 s, sys: 5.33 s, total: 20.4 s\n",
+      "Wall time: 20.7 s\n"
+     ]
+    }
+   ],
    "source": [
+    "%%time\n",
     "# next, we drop every bar that is \"empty\", meaning that the signal does not go above pedestal + 5 sigma\n",
     "# we also subtract pedestals in this step\n",
+    "\n",
     "run_df=drop_empty(run_df)"
    ]
   },
