new headers for cuts and fitting functions added

--- a/hcalEnv/notebooks/new_header_maker.ipynb
+++ b/hcalEnv/notebooks/new_header_maker.ipynb
@@ -13,7 +13,8 @@
     "import sys\n",
     "sys.path.append(\"../src\")\n",
     "\n",
-    "from data_prep import *"
+    "from data_prep import *\n",
+    "from make_cuts import *"
    ]
   },
   {
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3f405491-ef59-476d-a36a-9e6bd9071497",
    "metadata": {},
    "outputs": [],
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "2d7f54cc-35c9-40ea-9ef9-05e5985beb53",
    "metadata": {},
    "outputs": [
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "16d3831f-81c5-45ee-87a1-7b1478ff4681",
    "metadata": {},
    "outputs": [],
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "a2d2f58e-3447-450e-bbd8-f02e4434e141",
    "metadata": {},
    "outputs": [
@@ -214,7 +215,7 @@
        "4      0         0      0.923802       0.115475      0.395915  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,14 +226,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ccfa2a80-f57a-4108-b7bf-423fb43e0ec6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Events with multiple hits in first layer removed.\n",
+      "Events left: 42333\n",
+      "\n",
+      "\n",
+      "Events with hits in the back 5 layers removed.\n",
+      "Events left: 31066\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pf_event</th>\n",
+       "      <th>tot_end0</th>\n",
+       "      <th>adc_sum_end0</th>\n",
+       "      <th>adc_mean_end0</th>\n",
+       "      <th>adc_max_end0</th>\n",
+       "      <th>layer</th>\n",
+       "      <th>strip</th>\n",
+       "      <th>tot_end1</th>\n",
+       "      <th>adc_sum_end1</th>\n",
+       "      <th>adc_mean_end1</th>\n",
+       "      <th>adc_max_end1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>878</td>\n",
+       "      <td>656</td>\n",
+       "      <td>46.306773</td>\n",
+       "      <td>5.788347</td>\n",
+       "      <td>10.315095</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>384</td>\n",
+       "      <td>30.056549</td>\n",
+       "      <td>3.757069</td>\n",
+       "      <td>10.095833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>303</th>\n",
+       "      <td>45668</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.500580</td>\n",
+       "      <td>0.187572</td>\n",
+       "      <td>0.377924</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.407698</td>\n",
+       "      <td>0.175962</td>\n",
+       "      <td>0.362922</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>538</th>\n",
+       "      <td>3678</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.868335</td>\n",
+       "      <td>0.108542</td>\n",
+       "      <td>0.150083</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.409060</td>\n",
+       "      <td>0.176132</td>\n",
+       "      <td>0.236358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>566</th>\n",
+       "      <td>7463</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.274334</td>\n",
+       "      <td>0.659292</td>\n",
+       "      <td>1.007698</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.718100</td>\n",
+       "      <td>0.464762</td>\n",
+       "      <td>0.727257</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>877</th>\n",
+       "      <td>42239</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.144323</td>\n",
+       "      <td>1.143040</td>\n",
+       "      <td>1.918914</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.617992</td>\n",
+       "      <td>1.077249</td>\n",
+       "      <td>1.681781</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     pf_event  tot_end0  adc_sum_end0  adc_mean_end0  adc_max_end0  layer  \\\n",
+       "3         878       656     46.306773       5.788347     10.315095      1   \n",
+       "303     45668         0      1.500580       0.187572      0.377924      1   \n",
+       "538      3678         0      0.868335       0.108542      0.150083      1   \n",
+       "566      7463         0      5.274334       0.659292      1.007698      1   \n",
+       "877     42239         0      9.144323       1.143040      1.918914      1   \n",
+       "\n",
+       "     strip  tot_end1  adc_sum_end1  adc_mean_end1  adc_max_end1  \n",
+       "3        0       384     30.056549       3.757069     10.095833  \n",
+       "303      0         0      1.407698       0.175962      0.362922  \n",
+       "538      1         0      1.409060       0.176132      0.236358  \n",
+       "566      1         0      3.718100       0.464762      0.727257  \n",
+       "877      1         0      8.617992       1.077249      1.681781  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# r=first_layer_cut(r)\n",
-    "# r=back_layer_cut(r,5)\n",
-    "# r.head()"
+    "r=first_layer_cut(r)\n",
+    "r=back_layer_cut(r,5)\n",
+    "r.head()"
    ]
   },
   {
