pulse profile generator code updated

--- a/hcalEnv/notebooks/new_header_maker.ipynb
+++ b/hcalEnv/notebooks/new_header_maker.ipynb
@@ -10,16 +10,20 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "from tqdm import tqdm\n",
+    "\n",
     "import sys\n",
     "sys.path.append(\"../src\")\n",
     "\n",
     "from data_prep import *\n",
-    "from make_cuts import *"
+    "from make_cuts import *\n",
+    "from fitting_functions import *\n",
+    "from pulse_profile_generator import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "332f2e88-0160-46e5-8871-7fa3476afd27",
    "metadata": {},
    "outputs": [],
@@ -29,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "cc5b6c52-a17e-4a15-b2dd-98a2d5efd302",
    "metadata": {},
    "outputs": [],
@@ -45,9 +49,19 @@
    "execution_count": 5,
    "id": "3f405491-ef59-476d-a36a-9e6bd9071497",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 22.8 s, sys: 8.21 s, total: 31 s\n",
+      "Wall time: 35.5 s\n"
+     ]
+    }
+   ],
    "source": [
-    "p,m,r=import_data(c_folder,d_folder, 300, is_it_pulsed=False)"
+    "%%time\n",
+    "p,m,r=import_data(c_folder,d_folder, 305, is_it_pulsed=True)"
    ]
   },
   {
@@ -60,190 +74,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of events: 71416\n",
+      "Number of events: 47351\n",
       "\n",
       "\n",
       "Initial pedestal-based selection performed.\n",
-      "Events left: 71415\n",
+      "Events left: 46271\n",
       "\n",
-      "\n"
+      "\n",
+      "CPU times: user 1.39 s, sys: 960 ms, total: 2.35 s\n",
+      "Wall time: 4.05 s\n"
      ]
     }
    ],
    "source": [
-    "r=select_bars_with_data(r,p, subtract_pedestal=True, is_it_pulsed=False) #this needs to be run as it's own cell"
+    "%%time\n",
+    "r=select_bars_with_data(r,p, subtract_pedestal=True, is_it_pulsed=True) #this needs to be run as it's own cell"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "16d3831f-81c5-45ee-87a1-7b1478ff4681",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "r=convert_mip_to_MeV(r, m, is_it_pulsed=False)        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "id": "a2d2f58e-3447-450e-bbd8-f02e4434e141",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pf_event</th>\n",
-       "      <th>tot_end0</th>\n",
-       "      <th>adc_sum_end0</th>\n",
-       "      <th>adc_mean_end0</th>\n",
-       "      <th>adc_max_end0</th>\n",
-       "      <th>layer</th>\n",
-       "      <th>strip</th>\n",
-       "      <th>tot_end1</th>\n",
-       "      <th>adc_sum_end1</th>\n",
-       "      <th>adc_mean_end1</th>\n",
-       "      <th>adc_max_end1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>341</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.500580</td>\n",
-       "      <td>0.187572</td>\n",
-       "      <td>0.644693</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.418696</td>\n",
-       "      <td>0.177337</td>\n",
-       "      <td>0.637863</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>444</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.711386</td>\n",
-       "      <td>0.088923</td>\n",
-       "      <td>0.555770</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.067556</td>\n",
-       "      <td>0.258445</td>\n",
-       "      <td>0.549882</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>501</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.456118</td>\n",
-       "      <td>0.182015</td>\n",
-       "      <td>0.500193</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.385703</td>\n",
-       "      <td>0.173213</td>\n",
-       "      <td>0.494894</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>878</td>\n",
-       "      <td>656</td>\n",
-       "      <td>46.306773</td>\n",
-       "      <td>5.788347</td>\n",
-       "      <td>10.315095</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>384</td>\n",
-       "      <td>30.056549</td>\n",
-       "      <td>3.757069</td>\n",
-       "      <td>10.095833</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1024</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.156002</td>\n",
-       "      <td>0.144500</td>\n",
-       "      <td>0.422385</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.923802</td>\n",
-       "      <td>0.115475</td>\n",
-       "      <td>0.395915</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   pf_event  tot_end0  adc_sum_end0  adc_mean_end0  adc_max_end0  layer  \\\n",
-       "0       341         0      1.500580       0.187572      0.644693      1   \n",
-       "1       444         0      0.711386       0.088923      0.555770      1   \n",
-       "2       501         0      1.456118       0.182015      0.500193      1   \n",
-       "3       878       656     46.306773       5.788347     10.315095      1   \n",
-       "4      1024         0      1.156002       0.144500      0.422385      1   \n",
-       "\n",
-       "   strip  tot_end1  adc_sum_end1  adc_mean_end1  adc_max_end1  \n",
-       "0      0         0      1.418696       0.177337      0.637863  \n",
-       "1      0         0      2.067556       0.258445      0.549882  \n",
-       "2      0         0      1.385703       0.173213      0.494894  \n",
-       "3      0       384     30.056549       3.757069     10.095833  \n",
-       "4      0         0      0.923802       0.115475      0.395915  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "ccfa2a80-f57a-4108-b7bf-423fb43e0ec6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Events with multiple hits in first layer removed.\n",
-      "Events left: 42333\n",
-      "\n",
-      "\n",
-      "Events with hits in the back 5 layers removed.\n",
-      "Events left: 31066\n",
-      "\n",
-      "\n"
+      "CPU times: user 31.6 s, sys: 200 ms, total: 31.8 s\n",
+      "Wall time: 32.6 s\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "pulses=make_pulse_profiles(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "30eb4905-8739-4d17-9095-379f28d0b877",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -265,125 +138,99 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>pf_event</th>\n",
-       "      <th>tot_end0</th>\n",
-       "      <th>adc_sum_end0</th>\n",
-       "      <th>adc_mean_end0</th>\n",
-       "      <th>adc_max_end0</th>\n",
        "      <th>layer</th>\n",
-       "      <th>strip</th>\n",
-       "      <th>tot_end1</th>\n",
-       "      <th>adc_sum_end1</th>\n",
-       "      <th>adc_mean_end1</th>\n",
-       "      <th>adc_max_end1</th>\n",
+       "      <th>bar</th>\n",
+       "      <th>event</th>\n",
+       "      <th>has_problem</th>\n",
+       "      <th>problem_type</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>index</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>878</td>\n",
-       "      <td>656</td>\n",
-       "      <td>46.306773</td>\n",
-       "      <td>5.788347</td>\n",
-       "      <td>10.315095</td>\n",
-       "      <td>1</td>\n",
+       "      <th>15</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>384</td>\n",
-       "      <td>30.056549</td>\n",
-       "      <td>3.757069</td>\n",
-       "      <td>10.095833</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>303</th>\n",
-       "      <td>45668</td>\n",
+       "      <th>247</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>247.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1.500580</td>\n",
-       "      <td>0.187572</td>\n",
-       "      <td>0.377924</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.407698</td>\n",
-       "      <td>0.175962</td>\n",
-       "      <td>0.362922</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>538</th>\n",
-       "      <td>3678</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.868335</td>\n",
-       "      <td>0.108542</td>\n",
-       "      <td>0.150083</td>\n",
+       "      <th>257</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>257.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.409060</td>\n",
-       "      <td>0.176132</td>\n",
-       "      <td>0.236358</td>\n",
+       "      <td>SPIKE_1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>566</th>\n",
-       "      <td>7463</td>\n",
+       "      <th>265</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>265.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>5.274334</td>\n",
-       "      <td>0.659292</td>\n",
-       "      <td>1.007698</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.718100</td>\n",
-       "      <td>0.464762</td>\n",
-       "      <td>0.727257</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>877</th>\n",
-       "      <td>42239</td>\n",
+       "      <th>289</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>289.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>9.144323</td>\n",
-       "      <td>1.143040</td>\n",
-       "      <td>1.918914</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8.617992</td>\n",
-       "      <td>1.077249</td>\n",
-       "      <td>1.681781</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     pf_event  tot_end0  adc_sum_end0  adc_mean_end0  adc_max_end0  layer  \\\n",
-       "3         878       656     46.306773       5.788347     10.315095      1   \n",
-       "303     45668         0      1.500580       0.187572      0.377924      1   \n",
-       "538      3678         0      0.868335       0.108542      0.150083      1   \n",
-       "566      7463         0      5.274334       0.659292      1.007698      1   \n",
-       "877     42239         0      9.144323       1.143040      1.918914      1   \n",
-       "\n",
-       "     strip  tot_end1  adc_sum_end1  adc_mean_end1  adc_max_end1  \n",
-       "3        0       384     30.056549       3.757069     10.095833  \n",
-       "303      0         0      1.407698       0.175962      0.362922  \n",
-       "538      1         0      1.409060       0.176132      0.236358  \n",
-       "566      1         0      3.718100       0.464762      0.727257  \n",
-       "877      1         0      8.617992       1.077249      1.681781  "
+       "       layer  bar  event  has_problem problem_type\n",
+       "index                                             \n",
+       "15       1.0  0.0   15.0            0          NaN\n",
+       "247      1.0  0.0  247.0            0          NaN\n",
+       "257      1.0  0.0  257.0            1      SPIKE_1\n",
+       "265      1.0  0.0  265.0            0          NaN\n",
+       "289      1.0  0.0  289.0            0          NaN"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r=first_layer_cut(r)\n",
-    "r=back_layer_cut(r,5)\n",
-    "r.head()"
+    "pulses.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "97a8fdb0-5ca5-4b8a-8da3-11dcabd147dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pulses.to_csv(d_folder+\"/run_\"+str(r_n)+\"_pulse_problems.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8adc036-dc57-40b8-b193-7845182611c9",
+   "id": "98f41092-0769-4bb2-8997-d1e098a86181",
    "metadata": {},
    "outputs": [],
    "source": []
