--- a/hcalEnv/notebooks/remove_bad_pulses.ipynb
+++ b/hcalEnv/notebooks/remove_bad_pulses.ipynb
@@ -246,8 +246,7 @@
     "        return 1\n",
     "        \n",
     "    # there could be some failsafe here but I cannot be bothered rn\n",
-    "    return 0\n",
-    "    "
+    "    return 0"
    ]
   },
   {
@@ -323,9 +322,6 @@
     "            out_line.append(0)\n",
     "            out_line.append(\"NaN\")\n",
     "\n",
-    "    \n",
-    "    \n",
-    "    #plot_pulse(end0, end1, layer, bar, event)\n",
     "    return out_line"
    ]
   },
