added cell to generate all shower profiles at once

--- a/hcalEnv/notebooks/make_shower_profiles.ipynb
+++ b/hcalEnv/notebooks/make_shower_profiles.ipynb
@@ -1246,7 +1246,7 @@
     }
    ],
    "source": [
-    "%%time\n",
+    "# %%time 4:23 minutes to run the cell :)\n",
     "for r_n in runs:\n",
     "    Path(\"../../plots\").mkdir(parents=True, exist_ok=True)\n",
     "    Path(\"../../plots/run_\"+str(r_n)).mkdir(parents=True, exist_ok=True)\n",
