reran muon run with correct data and finished transverse error spectra

--- a/hcalEnv/notebooks/new_header_maker.ipynb
+++ b/hcalEnv/notebooks/new_header_maker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "id": "c18469a0-12fa-4300-8c1b-cafdf535d425",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "id": "332f2e88-0160-46e5-8871-7fa3476afd27",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "id": "cc5b6c52-a17e-4a15-b2dd-98a2d5efd302",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "id": "3f405491-ef59-476d-a36a-9e6bd9071497",
    "metadata": {},
    "outputs": [
@@ -61,8 +61,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8.29 s, sys: 266 ms, total: 8.56 s\n",
-      "Wall time: 8.56 s\n"
+      "CPU times: user 4.21 s, sys: 1.19 s, total: 5.4 s\n",
+      "Wall time: 8.7 s\n"
      ]
     }
    ],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "id": "2d7f54cc-35c9-40ea-9ef9-05e5985beb53",
    "metadata": {},
    "outputs": [
@@ -81,15 +81,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of events: 173334\n",
+      "Number of events: 7800\n",
       "\n",
       "\n",
       "Initial pedestal-based selection performed.\n",
-      "Events left: 95514\n",
+      "Events left: 7764\n",
       "\n",
       "\n",
-      "CPU times: user 841 ms, sys: 69.8 ms, total: 911 ms\n",
-      "Wall time: 909 ms\n"
+      "CPU times: user 345 ms, sys: 314 ms, total: 658 ms\n",
+      "Wall time: 1.86 s\n"
      ]
     }
    ],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "id": "c4b2375c-8521-4716-b879-66a8eb233b6c",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "id": "1ce2e651-c025-4368-9895-892631269029",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "id": "00a91d9e-c829-481f-8c76-7657c82151a0",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "id": "a2d2f58e-3447-450e-bbd8-f02e4434e141",
    "metadata": {},
    "outputs": [
@@ -144,8 +144,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 50s, sys: 249 ms, total: 1min 50s\n",
-      "Wall time: 1min 50s\n"
+      "CPU times: user 21.9 s, sys: 95.3 ms, total: 22 s\n",
+      "Wall time: 22.1 s\n"
      ]
     }
    ],
